--- a/app/views/admin/prizes/detail.html.erb
+++ b/app/views/admin/prizes/detail.html.erb
@@ -29,13 +29,13 @@
         <div class="form-group">
           <label class="col-sm-2 control-label">兑奖情况</label>
           <div class="col-sm-10">
-              <p class="form-control-static">
-                <% if @prize.claimed? %>
+            <p class="form-control-static">
+              <% if @prize.claimed? %>
                 已兑奖
-                <% else %>
-                尚未兑奖
-                <% end %>
-              </p>
+            <% else %>
+              尚未兑奖
+          <% end %>
+            </p>
           </div>
         </div>
 
@@ -48,11 +48,12 @@
       <% end %>
       <div class="form-group">
         <div class="col-sm-offset-2">
-        <% if @prize.unclaimed? %>
+          <% if !@prize.nil? and @prize.unclaimed? %>
           <%= link_to "确认兑奖", "/admin/prizes/claim/#{@prize.id}", method: "post", class: "btn btn-success", style: "margin-right:20px;"%>
           <% end %>
           <a href="/admin/prizes" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> 返回</a>
-          </div>
+        </div>
       </div>
+
   </div>
 </div>
