--- a/app/assets/stylesheets/shares.scss
+++ b/app/assets/stylesheets/shares.scss
@@ -77,3 +77,27 @@ label {
         font-weight: bold;
     }
 }
+
+.block-layer {
+    display: none;
+    z-index: 999;
+    background: #000;
+    opacity: .3;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+.block-layer-text {
+    display:none;
+    z-index: 9999;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    padding: 15px;
+    opacity: .8;
+    background: #fff;
+    text-align: right;
+    font-weight: bold;
+}
