--- a/app/assets/stylesheets/lottery.scss
+++ b/app/assets/stylesheets/lottery.scss
@@ -2,7 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 html, body {
-    width: 100%;
     height: 100%;
     overflow:hidden;
     margin: 0;
@@ -15,8 +14,7 @@ img {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
+    margin-top: -30px;
 }
 
 article {
