--- a/app/views/lottery/index.html.erb
+++ b/app/views/lottery/index.html.erb
@@ -28,7 +28,7 @@
             <li>短信验证码</li>
             <li><button style="width:35%;" id="get_captcha" onclick="return getCaptcha();">获取验证码</button></li>
             <li><input type="text" id="captcha" name="captcha" style="width:35%;"></li>
-            <li onclick="return signIn();"><%= image_tag "go.png" %></li>
+            <li onclick="return signIn();"><%= image_tag "go.png", style: "position:relative;" %></li>
           </ul>
         </div>
       </section>
