--- a/app/assets/stylesheets/lottery.scss
+++ b/app/assets/stylesheets/lottery.scss
@@ -14,14 +14,13 @@ img {
 }
 
 footer {
-    margin-top: -30px;
 }
 
 article {
     overflow: hidden;
     height: 100%;
     width: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background: #fbf000;
