--- a/app/views/lottery/index.html.erb
+++ b/app/views/lottery/index.html.erb
@@ -33,7 +33,7 @@
         </div>
       </section>
 
-      <footer>
+      <footer style="margin-top: -30px;">
         <%= image_tag "footer1.png"%>
       </footer>
     </article>
@@ -71,7 +71,7 @@
         </div>
       </section>
 
-      <footer>
+      <footer style="margin-top:15px;">
         <%= image_tag "footer.png"%>
       </footer>
     </article>
