--- a/app/views/admin/activities/index.html.erb
+++ b/app/views/admin/activities/index.html.erb
@@ -1,4 +1,4 @@
-<ul class="bg-info" style="padding: 15px 40px;">
+<ul class="bg-info row" style="padding: 15px 40px;">
   <li>
     15：00奖池总数：<%=@pool_1_size%>， 已中奖人数：<%=@lottery_pool_1%>，剩余奖品数量：<%=@pool_1_size - @lottery_pool_1%>
   </li>
@@ -9,26 +9,41 @@
     已兑奖人数：<%=@claim_count%>
   </li>
 </ul>
-<table class="table">
-  <thead>
-    <tr>
-      <th>电话</th>
-      <th>奖品</th>
-      <th>状态</th>
-      <th>中奖时间</th>
-      <th>兑奖时间</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @prizes.each do |prize| %>
-    <tr>
-      <td><%= prize.tel %></td>
-      <td><%= prize.prize %>元</td>
-      <td><%= prize_status prize %></td>
-      <td><%= readable_time prize.time %></td>
-      <td><%= readable_time prize.claim_time %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="row">
+  <form action="/admin/activities/search"  class="col-sm-9 input-group" style="float:left">
+    <input type="tel" name="tel" placeholder="电话号码" class="form-control" value="<%=@tel%>">
+    <span class="input-group-btn">
+      <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+    </span>
+  </form>
+  <div class="col-sm-2">
+    <%=link_to "导出Excel", "/admin/activities/export", class: "btn btn-success"%>
+  </div>
+</div>
+<div class="row">
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>电话</th>
+          <th>奖品</th>
+          <th>状态</th>
+          <th>中奖时间</th>
+          <th>兑奖时间</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @prizes.each do |prize| %>
+          <tr>
+            <td><%= prize.tel %></td>
+            <td><%= prize.prize %>元</td>
+            <td><%= prize_status prize %></td>
+            <td><%= readable_time prize.time %></td>
+            <td><%= readable_time prize.claim_time %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 <%= will_paginate @prizes, page_links: false %>
