--- a/app/views/shares/new.html.erb
+++ b/app/views/shares/new.html.erb
@@ -1,3 +1,7 @@
+<div style="background:#fffaa4;text-align:center;border:1px solid #000;overflow:hidden;margin-left:15px;margin-right:15px;margin-top:5px;">
+  <div class="col-xs-6" style="padding: 3px;">所有分享</div>
+  <div class="col-xs-6" style="padding: 3px;background:#000;color:#fff;">我要分享</div>
+</div>
 <section id="message_section" class="container">
   <div>
     <h2 style="margin: 6px 0;">
