--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,8 +25,10 @@
     padding: 30px;
     background: #fffaa4;
     margin: 30px auto;
+    font-size: 24px;
     h1 {
         margin-top: 0;
+        font-size: 28px;
     }
     img {
         display: block;
