--- a/app/views/admin/prizes/detail.html.erb
+++ b/app/views/admin/prizes/detail.html.erb
@@ -4,56 +4,69 @@
     <% if @prize.nil? || @prize.prize.nil? %>
       <p class="bg-danger" style="padding: 16px;">没有查到手机号（<%=@tel%>）的中奖记录</p>
     <% else %>
-      <div class="form-horizontal">
-        <div class="form-group">
-          <label class="col-sm-2 control-label">手机号码</label>
-          <div class="col-sm-10">
-            <p class="form-control-static"><%=@prize.tel%></p>
+      <form action="/admin/prizes/claim/<%=@prize.id%>}" method="POST">
+        <div class="form-horizontal">
+          <div class="form-group">
+            <label class="col-sm-2 control-label">手机号码</label>
+            <div class="col-sm-10">
+              <p class="form-control-static"><%=@prize.tel%></p>
+            </div>
           </div>
-        </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">客户姓名</label>
+            <div class="col-sm-10">
+              <% if @prize.name.nil? %>
+              <input type="text" required name="name" id="customer_name" class="form-control" autofocus required></input>
+              <% else%>
+              <p class="form-control-static"><%= @prize.name%></p>
+              <% end %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">抽中奖品</label>
+            <div class="col-sm-10">
+              <p class="form-control-static"><%=@prize.prize%>元</p>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">中奖时间</label>
+            <div class="col-sm-10">
+              <p class="form-control-static"><%=readable_time @prize.time%></p>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">兑奖情况</label>
+            <div class="col-sm-10">
+              <p class="form-control-static">
+                <% if @prize.claimed? %>
+                  已兑奖
+              <% else %>
+                尚未兑奖
+            <% end %>
+              </p>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">兑奖时间</label>
+            <div class="col-sm-10">
+              <p class="form-control-static"><%= readable_time @prize.claim_time%></p>
+            </div>
+          </div>
+        <% end %>
 
         <div class="form-group">
-          <label class="col-sm-2 control-label">抽中奖品</label>
-          <div class="col-sm-10">
-            <p class="form-control-static"><%=@prize.prize%>元</p>
+          <div class="col-sm-offset-2 col-sm-10">
+            <% if !@prize.nil? and @prize.unclaimed? %>
+              <input type="submit" class="btn btn-success" style="margin-right:20px;" value="确认兑奖">
+            <% end %>
+              <a href="/admin/prizes" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> 返回</a>
           </div>
         </div>
-
-        <div class="form-group">
-          <label class="col-sm-2 control-label">中奖时间</label>
-          <div class="col-sm-10">
-            <p class="form-control-static"><%=readable_time @prize.time%></p>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label class="col-sm-2 control-label">兑奖情况</label>
-          <div class="col-sm-10">
-            <p class="form-control-static">
-              <% if @prize.claimed? %>
-                已兑奖
-            <% else %>
-              尚未兑奖
-          <% end %>
-            </p>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label class="col-sm-2 control-label">兑奖时间</label>
-          <div class="col-sm-10">
-            <p class="form-control-static"><%= readable_time @prize.claim_time%></p>
-          </div>
-        </div>
-      <% end %>
-      <div class="form-group">
-        <div class="col-sm-offset-2">
-          <% if !@prize.nil? and @prize.unclaimed? %>
-          <%= link_to "确认兑奖", "/admin/prizes/claim/#{@prize.id}", method: "post", class: "btn btn-success", style: "margin-right:20px;"%>
-          <% end %>
-          <a href="/admin/prizes" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> 返回</a>
-        </div>
-      </div>
-
+      </form>
   </div>
 </div>
