--- a/app/assets/stylesheets/screen.scss
+++ b/app/assets/stylesheets/screen.scss
@@ -29,6 +29,7 @@ section {
     vertical-align: top;
 }
 .share {
+    overflow: hidden;
     width: 345px;
     height:497px;
     border:4px solid #231814;
