--- a/app/views/shares/new.html.erb
+++ b/app/views/shares/new.html.erb
@@ -1,6 +1,6 @@
-<div style="background:#fffaa4;text-align:center;border:1px solid #000;overflow:hidden;margin-left:15px;margin-right:15px;margin-top:5px;">
-  <div class="col-xs-6" style="padding: 3px;">所有分享</div>
-  <div class="col-xs-6" style="padding: 3px;background:#000;color:#fff;">我要分享</div>
+<div style="background:#fffaa4;text-align:center;border:1px solid #111;overflow:hidden;margin-left:15px;margin-right:15px;margin-top:5px;">
+  <a class="col-xs-6" style="padding: 3px;text-decoration: none;color:#111;" href="/shares/index">所有分享</a>
+  <a class="col-xs-6" style="padding: 3px;background:#111;color:#fff;text-decoration: none;" href="#">我要分享</a>
 </div>
 <section id="message_section" class="container">
   <div>
