--- a/app/views/admin/shares/screen.html.erb
+++ b/app/views/admin/shares/screen.html.erb
@@ -15,20 +15,33 @@
       <div class="cm-top"></div>
       <div class="cm-bottom"></div>
     </section>
-    <section id="section_1" class="share" style="left:408px;">
+    <section id="section_1" class="share" style="left:408px;z-index:10">
       <% @share1 = Share.new if @share1.nil? %>
       <h1 id="name_1"><%=@share1.name%></h1>
       <p id="content_1"><%=@share1.content%></p>
       <%= image_tag @share1.image_1, id: "image_1" %>
       <input type="hidden" id="duration_1" value="<%=@share1.duration%>">
     </section>
-    <section id="section_2" class="share" style="left:757px;">
+    <section id="section_2" class="share" style="left:757px;z-index:10;">
       <% @share2 = Share.new if @share2.nil? %>
       <h1 id="name_2"><%=@share2.name%></h1>
       <p id="content_2"><%=@share2.content%></p>
       <%= image_tag @share2.image_1, id: "image_2" %>
       <input type="hidden" id="duration_2" value="<%=@share2.duration%>">
     </section>
+    <section id="section_3" class="share" style="left:408px;z-index:0;">
+      <h1 id="name_3"></h1>
+      <p id="content_3"></p>
+      <img id="image_3" />
+      <input type="hidden" id="duration_3">
+    </section>
+    <section id="section_4" class="share" style="left:757px;z-index:0;">
+      <h1 id="name_4"></h1>
+      <p id="content_4"></p>
+      <img id="image_4" />
+      <input type="hidden" id="duration_4">
+    </section>
+
     <section class="block-layer">
     </section>
     <%= javascript_include_tag 'screen' %>
