--- a/app/views/admin/shares/screen.html.erb
+++ b/app/views/admin/shares/screen.html.erb
@@ -14,6 +14,7 @@
     <section>
       <div class="cm-top"></div>
       <div class="cm-bottom"></div>
+      <div class="cm-bottom-text">（特例商品除外）</div>
     </section>
     <section id="section_1" class="share" style="left:408px;z-index:10">
       <% @share1 = Share.new if @share1.nil? %>
