--- a/app/views/admin/shares/show.html.erb
+++ b/app/views/admin/shares/show.html.erb
@@ -1,3 +1,4 @@
+<%= raw @sss%>
 <form class="form-horizontal" action="/admin/shares/check/<%=@share.id%>" method="POST">
   <div class="form-group">
     <label class="col-sm-2 control-label">昵称</label>
